# pyodk

./: .gitignore  404.html  README.md  dev_requirements.in  dev_requirements.pip  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  release.yml  verify.yml
assets/: extra_css.css
client/: index.html
docs/: README.md  api_index.csv  client.md  docs_requirements.in  docs_requirements.pip  entities.md  entity_lists.md  forms.md  http-methods.md  projects.md  submissions.md
docs/examples/: 2022-10-pyodk-webinar.ipynb  README.md  basic-analysis-pandas.ipynb  beyond-library-methods.ipynb  working-with-repeats.ipynb
docs/examples/app_user_provisioner/: app_user_provisioner.py  requirements.txt
docs/examples/create_entities_from_submissions/: create_entities_from_submissions.py
docs/examples/create_or_update_form/: create_or_update_form.py
docs/examples/mail_merge/: mail_merge.py  requirements.txt
entities/: index.html
entity_lists/: index.html
examples/: 2022-10-pyodk-webinar.ipynb  README.md  Using pyodk and pandas for basic analysis.ipynb  Using the API docs and HTTP methods.ipynb  app_user_provisioner.py  fav_color.xlsx  gis_centre_demo.xlsx  index.html  requirements.txt  simple_repeat.xlsx  working-with-repeats.ipynb
examples/2022-10-pyodk-webinar/: index.html
examples/app_user_provisioner/: requirements.txt
examples/basic-analysis-pandas/: index.html
examples/beyond-library-methods/: index.html
examples/create_entities_from_submissions/: imported_answers.csv
examples/create_or_update_form/: requirements.txt
examples/mail_merge/: requirements.txt  template.docx
examples/working-with-repeats/: index.html
forms/: index.html
http-methods/: index.html
overrides/: main.html
projects/: index.html
pyodk/: __init__.py  auth.py  client.py  config.py  errors.py  project.py  session.py  utils.py  validators.py
pyodk/_endpoints/: __init__.py  auth.py  bases.py  comments.py  entities.py  entity_list_properties.py  entity_lists.py  form_assignments.py  form_draft_attachments.py  form_drafts.py  forms.py  project_app_users.py  projects.py  roles.py  submission_attachments.py  submissions.py
pyodk/_utils/: config.py  session.py  validators.py
pyodk/endpoints/: auth.py  bases.py  comment.py  comments.py  form.py  forms.py  odata.py  project.py  projects.py  submissions.py  utils.py
search/: search_index.json
submissions/: index.html
tests/: test_auth.py  test_client.py  test_config.py  test_project.py  test_session.py  test_stub.py  test_validators.py  utils.py
tests/endpoints/: test_auth.py  test_comments.py  test_entities.py  test_entity_lists.py  test_form.py  test_forms.py  test_project.py  test_projects.py  test_submissions.py
tests/resources/: .pyodk_cache.toml  .pyodk_config.toml  __init__.py  comments_data.py  entities_data.py  entity_lists_data.py  form_data.py  forms_data.py  project_data.py  projects_data.py  submission_attachments_data.py  submissions_data.py
tests/utils/: entity_lists.py  forms.py  md_table.py  submissions.py  utils.py
(+11 files in other folders)
